updated deps, added install-changed

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "install-changed --install-command 'npm run fast-install' && npm run dev",
     "dev": "vite --port 3000 --open",
     "dev-sandbox": "vite --port 3000",
+    "fast-install": "npm i --prefer-offline --progress=false --no-audit --no-fund",
     "http-dev": "npx --yes http-server -p 3000 -o .",
     "build": "vite build",
     "preview": "vite preview",
@@ -14,13 +16,14 @@
   },
   "devDependencies": {
     "@types/preact-custom-element": "^4.0.4",
-    "bun": "^1.1.26",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.0"
+    "bun": "^1.1.27",
+    "install-changed": "^1.1.0",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.3"
   },
   "dependencies": {
     "htm": "^3.1.1",
-    "preact": "^10.19.2",
+    "preact": "^10.23.2",
     "preact-custom-element": "^4.3.0"
   }
 }
