--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "htm": "^3.1.1",
     "preact": "^10.23.2",
-    "preact-custom-element": "^4.3.0"
+    "preact-custom-element": "^4.3.0",
+    "preact-iso": "^2.6.3",
+    "wouter-preact": "^3.3.5"
   }
 }
