--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "tsc -p jsconfig.json",
-    "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate"
+    "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate",
+    "tsc": "tsc -p jsconfig.json"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
+    "@preact/signals": "^1.3.0",
     "@types/preact-custom-element": "^4.0.4",
     "bun": "^1.1.27",
     "install-changed": "^1.1.0",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.1-rc",
     "vite": "^5.4.3"
   },
   "dependencies": {
     "htm": "^3.1.1",
     "preact": "^10.23.2",
     "preact-custom-element": "^4.3.0",
-    "preact-iso": "^2.6.3",
     "wouter-preact": "^3.3.5"
   }
 }
