--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
+    "@preact/signals": "^1.3.0",
     "@types/preact-custom-element": "^4.0.4",
     "bun": "^1.1.27",
     "install-changed": "^1.1.0",
