--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "tsc -p jsconfig.json",
-    "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate"
+    "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate",
+    "tsc": "tsc -p jsconfig.json"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
@@ -20,7 +21,7 @@
     "@types/preact-custom-element": "^4.0.4",
     "bun": "^1.1.27",
     "install-changed": "^1.1.0",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.1-rc",
     "vite": "^5.4.3"
   },
   "dependencies": {
