--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
+    "@preact/preset-vite": "^2.9.1",
     "@preact/signals": "^1.3.0",
     "@types/preact-custom-element": "^4.0.4",
     "bun": "^1.1.27",
