--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,15 +12,16 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "esModuleInterop": false,
 
-    // Enforces .js extension for ES modules
-    // "module": "NodeNext",
-    // "moduleResolution": "NodeNext",
-
     // Language settings
     "strict": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
     "noUncheckedIndexedAccess": true,
     "useUnknownInCatchVariables": true,
     "allowUnreachableCode": false,
+    "noErrorTruncation": true,
+    "noFallthroughCasesInSwitch": true,
+    "exactOptionalPropertyTypes": true,
 
     "jsx": "react-jsx",
     "jsxImportSource": "preact",
@@ -28,9 +29,7 @@
 			"react": ["./node_modules/preact/compat/"],
 			"react-dom": ["./node_modules/preact/compat/"]
 		},
-
-    // Add typeRoots to include global types
-    // "typeRoots": ["./types", "./node_modules/@types"]
+    // "types": ["node"],
   },
   "include": ["types.d.ts", "src/**/*.js", "src/**/*.jsx"],
   "exclude": ["node_modules"],
