--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "tsc -p jsconfig.json",
-    "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate",
-    "tsc": "tsc -p jsconfig.json"
+    "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate --write",
+    "tsc": "tsc -p jsconfig.json",
+    "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
+    "@biomejs/biome": "^1.9.3",
     "@preact/preset-vite": "^2.9.1",
     "@preact/signals": "^1.3.0",
+    "@preact/signals-react": "^2.2.0",
+    "@types/node": "^22.7.4",
     "@types/preact-custom-element": "^4.0.4",
-    "bun": "^1.1.27",
+    "bun": "^1.1.29",
     "install-changed": "^1.1.0",
+    "patch-package": "^8.0.0",
     "typescript": "^5.6.1-rc",
-    "vite": "^5.4.3"
+    "vite": "^5.4.8",
+    "vite-plugin-checker": "^0.8.0"
   },
   "dependencies": {
     "htm": "^3.1.1",
-    "preact": "^10.23.2",
+    "preact": "^10.24.1",
     "preact-custom-element": "^4.3.0",
     "preact-fetching": "^1.0.0",
     "wouter-preact": "^3.3.5"
