--- a/jsconfig.json
+++ b/jsconfig.json
@@ -24,13 +24,13 @@
     "exactOptionalPropertyTypes": true,
 
     "jsx": "react-jsx",
-    "jsxImportSource": "preact",
-    "paths": {
-			"react": ["./node_modules/preact/compat/"],
-			"react-dom": ["./node_modules/preact/compat/"]
-		},
+    // "jsxImportSource": "preact",
+    // "paths": {
+		// 	"react": ["./node_modules/preact/compat/"],
+		// 	"react-dom": ["./node_modules/preact/compat/"]
+		// },
     // "types": ["node"],
   },
-  "include": ["types.d.ts", "src/**/*.js", "src/**/*.jsx"],
+  "include": ["types.d.ts", "global.d.ts", "src/**/*.js", "src/**/*.jsx"],
   "exclude": ["node_modules"],
 }
