--- a/package.json
+++ b/package.json
@@ -18,12 +18,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
-    "@preact/preset-vite": "^2.9.1",
-    "@preact/signals": "^1.3.0",
     "@preact/signals-react": "^2.2.0",
     "@preact/signals-react-transform": "^0.4.0",
     "@types/node": "^22.7.4",
-    "@types/preact-custom-element": "^4.0.4",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
@@ -35,14 +32,9 @@
     "vite-plugin-checker": "^0.8.0"
   },
   "dependencies": {
-    "htm": "^3.1.1",
-    "preact": "^10.24.1",
-    "preact-custom-element": "^4.3.0",
-    "preact-fetching": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swr": "^2.2.5",
-    "wouter": "^3.3.5",
-    "wouter-preact": "^3.3.5"
+    "wouter": "^3.3.5"
   }
 }
