--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "analyze": "ANALYZE=true bun run build",
     "start": "install-changed --install-command 'npm run fast-install' && npm run dev",
     "dev": "vite --port 3000 --open",
     "dev-sandbox": "vite --port 3000",
     "fast-install": "npm i --prefer-offline --progress=false --no-audit --no-fund",
     "http-dev": "npx --yes http-server --port 3000 --proxy 'http://localhost:3000?' -a localhost -o",
+    "install-react": "npm install --no-save --no-audit --no-fund --progress=false react react-dom",
+    "install-react-rc": "npm install --no-save --no-audit --no-fund --progress=false react@rc react-dom@rc",
     "build": "vite build",
-    "preview": "vite preview",
+    "compile": "bun run react-compiler-healthcheck && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
+    "preview": "bun run build && vite preview",
     "check": "tsc -p jsconfig.json",
     "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate --write",
     "tsc": "tsc -p jsconfig.json",
@@ -24,9 +28,12 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-27e0f40-20241002",
     "bun": "^1.1.29",
     "install-changed": "^1.1.0",
     "patch-package": "^8.0.0",
+    "react-compiler-healthcheck": "^0.0.0-experimental-6d7292b-20241002",
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.6.1-rc",
     "vite": "^5.4.8",
     "vite-plugin-checker": "^0.8.0"
@@ -36,5 +43,8 @@
     "react-dom": "^18.3.1",
     "swr": "^2.2.5",
     "wouter": "^3.3.5"
+  },
+  "overrides": {
+    "react": "$react"
   }
 }
