started showing ts errors

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "analyze": "ANALYZE=true bun run build",
-    "start": "install-changed --install-command 'npm run fast-install' && npm run dev",
-    "dev": "vite --port 3000 --open",
+    "start": "./scripts/start.sh",
+    "dev": "vite",
     "dev-sandbox": "vite --port 3000",
     "fast-install": "npm i --prefer-offline --progress=false --no-audit --no-fund",
     "http-dev": "npx --yes http-server --port 3000 --proxy 'http://localhost:3000?' -a localhost -o",
@@ -16,7 +16,7 @@
     "compile": "bun run react-compiler-healthcheck && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
     "preview": "bun run build && vite preview",
     "check": "tsc -p jsconfig.json",
-    "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate --write",
+    "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate --write && bun run postinstall",
     "tsc": "tsc -p jsconfig.json",
     "postinstall": "patch-package"
   },
@@ -28,11 +28,11 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
-    "babel-plugin-react-compiler": "^0.0.0-experimental-27e0f40-20241002",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-734b737-20241003",
     "bun": "^1.1.29",
     "install-changed": "^1.1.0",
     "patch-package": "^8.0.0",
-    "react-compiler-healthcheck": "^0.0.0-experimental-6d7292b-20241002",
+    "react-compiler-healthcheck": "^0.0.0-experimental-3fa0fc3-20241003",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.6.1-rc",
     "vite": "^5.4.8",
