biome working and fixed ts error

--- a/biome.json
+++ b/biome.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
   "files": {
+    "include": ["src"],
     "ignore": ["*.json"]
   },
   "linter": {
