--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "dev-sandbox": "vite --port 3000",
     "fast-install": "npm i --prefer-offline --progress=false --no-audit --no-fund",
     "http-dev": "npx --yes http-server --port 3000 --proxy 'http://localhost:3000?' -a localhost -o",
+    "lint": "biome check --write",
     "install-react": "npm install --no-save --no-audit --no-fund --progress=false react react-dom",
     "install-react-rc": "npm install --no-save --no-audit --no-fund --progress=false react@rc react-dom@rc",
-    "build": "vite build",
-    "compile": "bun run react-compiler-healthcheck && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
+    "build": "npx react-compiler-healthcheck@latest --yes && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
     "preview": "bun run build && vite preview",
-    "check": "tsc -p jsconfig.json",
     "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate --write && bun run postinstall",
     "tsc": "tsc -p jsconfig.json",
     "postinstall": "patch-package"
@@ -32,7 +31,6 @@
     "bun": "^1.1.29",
     "install-changed": "^1.1.0",
     "patch-package": "^8.0.0",
-    "react-compiler-healthcheck": "^0.0.0-experimental-3fa0fc3-20241003",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.6.1-rc",
     "vite": "^5.4.8",
