--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "compile": "npx react-compiler-healthcheck@latest --yes && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
     "preview": "bun run build && vite preview",
     "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate --write && bun run postinstall",
-    "tsc": "tsc -p jsconfig.json",
+    "tsc": "tsc",
     "postinstall": "patch-package"
   },
   "devDependencies": {
