--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
   "files": {
-    "include": ["src"],
+    "include": ["src", "*.ts", "*.tsx"],
     "ignore": ["*.json"]
   },
   "linter": {
@@ -36,7 +36,7 @@
         "noFocusedTests": "off"
       },
       "correctness": {
-        "useExhaustiveDependencies": "off",
+        "useExhaustiveDependencies": "warn",
         "noUnusedImports": "warn",
         "useHookAtTopLevel": "error"
       },
