--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "lint": "biome check --write",
     "install-react": "npm install --no-save --no-audit --no-fund --progress=false react react-dom",
     "install-react-rc": "npm install --no-save --no-audit --no-fund --progress=false react@rc react-dom@rc",
-    "build": "vite build",
-    "compile": "npx react-compiler-healthcheck@latest --yes && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
+    "build": "npx react-compiler-healthcheck@latest --yes && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
     "preview": "bun run build && vite preview",
     "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate --write && bun run postinstall",
     "tsc": "tsc",
@@ -28,6 +27,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react-swc": "^3.7.1",
     "babel-plugin-react-compiler": "^0.0.0-experimental-734b737-20241003",
     "bun": "^1.1.29",
     "install-changed": "^1.1.0",
