--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
   "files": {
-    "include": ["src", "*.ts", "*.tsx"],
+    "include": ["src", "*.ts", "*.tsx", "*.mjs"],
     "ignore": ["*.json"]
   },
   "linter": {
@@ -33,7 +33,8 @@
         "noArrayIndexKey": "off",
         "noAssignInExpressions": "off",
         "noConfusingVoidType": "off",
-        "noFocusedTests": "off"
+        "noFocusedTests": "off",
+        "noConsole": "warn"
       },
       "correctness": {
         "useExhaustiveDependencies": "warn",
@@ -61,5 +62,17 @@
       "quoteStyle": "single",
       "trailingCommas": "es5"
     }
-  }
+  },
+  "overrides": [
+    {
+      "include": ["logger.ts", "scripts/*.ts"],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noConsole": "off"
+          }
+        }
+      }
+    }
+  ]
 }
