--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "volta": {
+    "node": "22.9.0"
+  },
+  "files": [],
   "scripts": {
     "analyze": "ANALYZE=true bun run build",
     "start": "./scripts/start.sh",
@@ -10,7 +14,8 @@
     "dev-sandbox": "vite --port 3000",
     "fast-install": "npm i --prefer-offline --progress=false --no-audit --no-fund",
     "http-dev": "npx --yes http-server --port 3000 --proxy 'http://localhost:3000?' -a localhost -o",
-    "lint": "biome check --write",
+    "lint": "eslint --cache src && biome check",
+    "lint-fix": "eslint --cache src && biome check --write",
     "install-react": "npm install --no-save --no-audit --no-fund --progress=false react react-dom",
     "install-react-rc": "npm install --no-save --no-audit --no-fund --progress=false react@rc react-dom@rc",
     "build": "npx react-compiler-healthcheck@latest --yes && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
@@ -21,8 +26,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
+    "@eslint/js": "^9.12.0",
     "@preact/signals-react": "^2.2.0",
     "@preact/signals-react-transform": "^0.4.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
@@ -30,10 +37,12 @@
     "@vitejs/plugin-react-swc": "^3.7.1",
     "babel-plugin-react-compiler": "^0.0.0-experimental-734b737-20241003",
     "bun": "^1.1.29",
+    "eslint": "^9.12.0",
     "install-changed": "^1.1.0",
     "patch-package": "^8.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "typescript": "^5.6.1-rc",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0",
     "vite": "^5.4.8",
     "vite-plugin-checker": "^0.8.0"
   },
