--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "exactOptionalPropertyTypes": true,
   },
   "include": ["types.d.ts", "global.d.ts", "src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "dist"],
 }
