--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dev-sandbox": "vite --port 3000",
     "fast-install": "npm i --prefer-offline --progress=false --no-audit --no-fund",
     "http-dev": "npx --yes http-server --port 3000 --proxy 'http://localhost:3000?' -a localhost -o",
-    "lint": "eslint --cache src && biome check",
-    "lint-fix": "eslint --cache src && biome check --write",
+    "lint": "biome check && eslint --debug --cache src",
+    "lint-fix": "biome check --write && eslint --cache src",
     "install-react": "npm install --no-save --no-audit --no-fund --progress=false react react-dom",
     "install-react-rc": "npm install --no-save --no-audit --no-fund --progress=false react@rc react-dom@rc",
     "build": "npx react-compiler-healthcheck@latest --yes && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
