--- a/package.json
+++ b/package.json
@@ -21,13 +21,22 @@
     "build": "npx react-compiler-healthcheck@latest --yes && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
     "preview": "bun run build && vite preview",
     "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate --write && biome clean && bun run postinstall",
+    "test": "bun test --preload ./preload.ts",
+    "test-watch": "bun test --watch --preload ./preload.ts",
     "tsc": "tsc",
     "postinstall": "patch-package"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
     "@eslint/js": "^9.12.0",
+    "@happy-dom/global-registrator": "^15.7.4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/bun": "^1.1.10",
     "@types/eslint__js": "^8.42.3",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
