--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev-sandbox": "vite --port 3000",
     "fast-install": "npm i --prefer-offline --progress=false --no-audit --no-fund",
     "http-dev": "npx --yes http-server --port 3000 --proxy 'http://localhost:3000?' -a localhost -o",
-    "lint": "biome check && eslint --debug --cache src",
+    "lint": "biome check && eslint --cache src",
     "lint-fix": "biome check --write && eslint --cache src",
     "install-react": "npm install --no-save --no-audit --no-fund --progress=false react react-dom",
     "install-react-rc": "npm install --no-save --no-audit --no-fund --progress=false react@rc react-dom@rc",
@@ -45,6 +45,7 @@
     "babel-plugin-react-compiler": "^0.0.0-experimental-734b737-20241003",
     "bun": "1.1.27",
     "eslint": "^9.12.0",
+    "eslint-plugin-react-compiler": "^0.0.0-experimental-9a75bad-20241003",
     "install-changed": "^1.1.0",
     "patch-package": "^8.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
