first working version of css modules, no type checking

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "http-dev": "npx --yes http-server --port 3000 --proxy 'http://localhost:3000?' -a localhost -o",
     "lint": "biome check && eslint --cache src",
     "lint-fix": "biome check --write && eslint --cache src",
-    "install-react": "npm install --no-save --no-audit --no-fund --progress=false react react-dom",
-    "install-react-rc": "npm install --no-save --no-audit --no-fund --progress=false react@rc react-dom@rc",
+    "install-react": "npm install --silent --no-save --no-audit --no-fund --progress=false react react-dom",
+    "install-react-rc": "npm install --silent --no-save --no-audit --no-fund --progress=false react@rc react-dom@rc",
     "build": "npx react-compiler-healthcheck@latest --yes --src 'src/**/*.{ts,tsx}' && bun run install-react-rc && vite build && ([ -z \"$CI\" ] && bun run install-react || true)",
     "preview": "bun run build && vite preview",
     "install-latest": "npm i --no-fund $(bun --silent ./scripts/install-latest.ts) && npx @biomejs/biome migrate --write && biome clean && bun run postinstall",
@@ -47,6 +47,7 @@
     "eslint": "^9.12.0",
     "eslint-plugin-react-compiler": "^0.0.0-experimental-9a75bad-20241003",
     "install-changed": "^1.1.0",
+    "lightningcss": "^1.27.0",
     "patch-package": "^8.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.6.2",
