--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lightningcss": "^1.27.0",
     "patch-package": "^8.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
+    "typed-css-modules": "^0.9.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0",
     "vite": "^5.4.8",
