--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
   "files": {
     "include": ["src", "*.ts", "*.tsx", "*.mjs"],
-    "ignore": ["*.json", "preload.ts"]
+    "ignore": ["*.json", "preload.ts", "*.module.css.d.ts"]
   },
   "linter": {
     "enabled": true,
@@ -55,7 +55,7 @@
     "lineWidth": 120
   },
   "organizeImports": {
-    "enabled": true
+    "enabled": false
   },
   "javascript": {
     "formatter": {
