moved to vanilla extract

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev-sandbox": "vite --port 3000",
     "fast-install": "npm i --prefer-offline --progress=false --no-audit --no-fund",
     "http-dev": "npx --yes http-server --port 3000 --proxy 'http://localhost:3000?' -a localhost -o",
-    "lint": "biome check && eslint --cache src && stylelint --cache ./src/**/*.css",
+    "lint": "biome check && eslint --cache src",
     "lint-fix": "biome check --write && eslint --cache src",
     "install-react": "npm install --silent --no-save --no-audit --no-fund --progress=false react react-dom",
     "install-react-rc": "npm install --silent --no-save --no-audit --no-fund --progress=false react@rc react-dom@rc",
@@ -40,6 +40,7 @@
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "@vanilla-extract/vite-plugin": "^4.0.16",
     "@vitejs/plugin-react": "^4.3.2",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "babel-plugin-react-compiler": "^0.0.0-experimental-734b737-20241003",
@@ -50,8 +51,6 @@
     "lightningcss": "^1.27.0",
     "patch-package": "^8.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "stylelint": "^16.9.0",
-    "stylelint-config-standard": "^36.0.1",
     "typed-css-modules": "^0.9.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0",
